--- a/students/motkaliuk_andrii/17_grid/src/css/_variables.scss
+++ b/students/motkaliuk_andrii/17_grid/src/css/_variables.scss
@@ -1,12 +1,10 @@
-$orang-color: white;
-$white-color: #fff;
+$white-color: #FFFFFF;
 $gray-3-color: #dee2e6;
 $gray-6-color: #868e96;
 $grey-7-color: #495057;
 $gray-8-color: #343a40;
-$green-color: green;
 
-$default-body-color: $orang-color;
+$default-body-color: $white-color;
 
 // fonts
 $default-font-name: 'Roboto';
@@ -14,8 +12,8 @@ $fallback: Arial, Helvetica, sans-serif;
 $main-font: $default-font-name, $fallback;
 
 $container-padding: 15px;
-$container-max-width: 1200px;
+$container-max-width: 1170px;
 
 $font-path: './fonts/';
-$default-width: 1200px;
+$default-width: 1170px;
 $gap: 15px;
