--- a/students/motkaliuk_andrii/17_grid/src/css/_global.scss
+++ b/students/motkaliuk_andrii/17_grid/src/css/_global.scss
@@ -1,14 +1,21 @@
 @include font-face('roboto-v30-latin-regular');
 @include font-face('roboto-v30-latin-500', 500);
-@include font-face('delius-unicase-v26-latin-regularroboto-v30-latin-700');
+@include font-face('delius-unicase-v26-latin-regular');
 @include font-face("Delius Unicase");
 
+@font-face {
+    font-display: swap;
+    font-family: 'Delius Unicase';
+    font-style: normal;
+    font-weight: 400;
+    src: url('./fonts/delius-unicase-v26-latin-regular.woff2') format('woff2');
+}
+
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: $main-font;
     background-color: $default-body-color;
     font-size: 20px;
     color: #E0E0E0;
-
 }
 
 @include grid;
