--- a/students/motkaliuk_andrii/14_vector_graphics/src/css/_global.scss
+++ b/students/motkaliuk_andrii/14_vector_graphics/src/css/_global.scss
@@ -44,55 +44,7 @@ body {
     background-color: $default-body-color;
 }
 
-// @include grid;
-
-.container {
-    margin: 0 auto;
-    max-width: $container-max-width;
-    width: 100%;
-    padding: $container-padding;
-    box-sizing: border-box;
-}
-
-.row {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.col-12 {
-    max-width: calc(100% / 12 * 12);
-    width: 100%;
-}
-
-.col-7 {
-    max-width: calc(100% / 12 * 7);
-    width: 100%;
-}
-
-.col-6 {
-    max-width: calc(100% / 12 * 6);
-    width: 100%;
-}
-
-.col-5 {
-    max-width: calc(100% / 12 * 5);
-    width: 100%;
-}
-
-.col-4 {
-    max-width: calc(100% / 12 * 4);
-    width: 100%;
-}
-
-.col-3 {
-    max-width: calc(100% / 12 * 3);
-    width: 100%;
-}
-
-.col-2 {
-    max-width: calc(100% / 12 * 2);
-    width: 100%;
-}
+@include grid;
 
 [class*="header"] {
     color: $black-color;
