--- a/students/motkaliuk_andrii/14_vector_graphics/src/css/main/_the_design.scss
+++ b/students/motkaliuk_andrii/14_vector_graphics/src/css/main/_the_design.scss
@@ -1,15 +1,19 @@
 .design {
     display: flex;
     padding-top: 20px;
-    padding-bottom: 100px;
+    padding-bottom: 60px;
 
     &_item1 {
-        padding-top: 170px;
+        padding-top: 120px;
     }
 
     &_item2 {
         text-align: end;
-        padding-top: 70px;
+        padding-top: 30px;
+
+        img {
+            float: right;
+        }
     }
 
     &_header {
@@ -17,7 +21,6 @@
         line-height: 54px;
     }
 }
-
 
 .design_item_content {
     padding: 30px 50px 0 0;
