--- a/students/motkaliuk_andrii/14_vector_graphics/src/css/styles.scss
+++ b/students/motkaliuk_andrii/14_vector_graphics/src/css/styles.scss
@@ -1,6 +1,7 @@
 @use 'sass:math';
 @import './reset';
 @import "./variables";
+@import "./mixins";
 @import "./global";
 @import "./header/header";
 @import "./main/main";
