--- a/students/linov_mykhailo/17_grid_layout/src/css/_global.scss
+++ b/students/linov_mykhailo/17_grid_layout/src/css/_global.scss
@@ -1,5 +1,6 @@
 @include font-face('roboto-v30-latin-regular');
-@include font-face('roboto-v30-latin-500');
+@include font-face('roboto-v30-latin-500', 500);
+@include font-face('delius-unicase-v26-latin-regular');
 
 body {
     font-family: $main-font;
@@ -21,5 +22,13 @@ body {
 
 img {
     width: 100%;
+    height: 100%;
     border-radius: 20px;
+}
+
+.title {
+    @include font-family (400, 36px, $black-color, normal, );
+    text-align: center;
+    padding-top: 86px;
+    padding-bottom: 80px;
 }
