--- a/students/linov_mykhailo/17_grid_layout/src/css/_variables.scss
+++ b/students/linov_mykhailo/17_grid_layout/src/css/_variables.scss
@@ -1,4 +1,5 @@
 // colors
+$black-color: #000;
 $orang-color: #f76707;
 $white-color: #fff;
 $gray-3-color: #dee2e6;
@@ -14,6 +15,7 @@ $default-font-name: 'Roboto';
 $fallback: Arial, Helvetica, sans-serif;
 $default-font-size: 20px;
 $default-font-color: $white-color;
+$title-font: 'Delius Unicase';
 
 $main-font: $default-font-name, $fallback;
 $font-path: './fonts/';
@@ -25,7 +27,7 @@ $container-max-width: 1200px;
 $gap: 15px;
 $defaulp-count-col: 12;
 
-$default-width: 1200px;
+$default-width: 1170px;
 
 $breack-points: (
     "lg": 1200px,
