--- a/students/havrylova_kateryna/18/src/css/_mixins.scss
+++ b/students/havrylova_kateryna/18/src/css/_mixins.scss
@@ -120,7 +120,7 @@
             }
 
             .hidden-#{$breackpoint} {
-                display: none;
+                display: none !important;
             }
         }
     }
