--- a/students/hridina_anastasiia/17_grid_layout/src/css/_global.scss
+++ b/students/hridina_anastasiia/17_grid_layout/src/css/_global.scss
@@ -15,14 +15,14 @@ body {
 }
 
 section {
-    padding: 120px 135px;
+    padding-top: 120px;
+    padding-bottom: 100px;
 }
 
 img {
     max-width: 100%;
-    height: 370px;
+    height: 100%;
     object-fit: cover;
-    border-radius: 20px;
 }
 
 .heading {
@@ -31,6 +31,7 @@ img {
     letter-spacing: $heading-letter-spacing;
     padding-bottom: 80px;
     text-align: center;
+    grid-column: 1 / span 3;
 }
 
 @include grid();
