--- a/students/hridina_anastasiia/17_grid_layout/src/css/_variables.scss
+++ b/students/hridina_anastasiia/17_grid_layout/src/css/_variables.scss
@@ -6,6 +6,7 @@ $gray-6-color: #868e96;
 $grey-7-color: #495057;
 $gray-8-color: #343a40;
 $green-color: green;
+$pale-white: #E0E0E0;
 
 $default-body-color: $white-color;
 
