--- a/students/hridina_anastasiia/17_grid_layout/src/css/main/_grid.scss
+++ b/students/hridina_anastasiia/17_grid_layout/src/css/main/_grid.scss
@@ -42,6 +42,7 @@
         top: 0;
         right: 0;
         bottom: 0;
+        pointer-events: none;
     }
 
     &:hover::after {
@@ -74,7 +75,6 @@
         background-color: $pale-white;
         background-position: center;
         background-repeat: no-repeat;
-        cursor: pointer;
 
 
         // .icon_heart
