--- a/students/hridina_anastasiia/14_postprocessors/src/css/main/_tools.scss
+++ b/students/hridina_anastasiia/14_postprocessors/src/css/main/_tools.scss
@@ -1,4 +1,4 @@
-.block__tools {
+.design__tools {
     background-image: url(../images/background.svg);
     background-size: cover;
     background-position: center bottom;
