added gradient and pointer

--- a/students/havrylova_kateryna/17_grid/src/css/_blog.scss
+++ b/students/havrylova_kateryna/17_grid/src/css/_blog.scss
@@ -1,16 +1,6 @@
 .page {
     padding: $container-padding;
     max-width: $container-max-width;
-
-    // justify-content: center;
-    // display: grid;
-
-    // grid-template-areas:
-    //     "header header"
-    //     "aside main"
-    //     "footer footer"
-    // ;
-
 }
 
 img {
@@ -18,68 +8,27 @@ img {
     border-radius: 20px;
 }
 
-
-.logo {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    background-color: aqua;
-}
-
-.menu {
-    // list-style-type: none;
-    display: flex;
-
-    // .menu__item
-
-    &__item {}
-
-    // .menu__link
-
-    &__link {
-        display: inline-block;
-        padding: 15px;
-    }
-
-}
-
-.aside {
-    grid-area: aside;
-}
-
-.blog-menu {
-
-    // .blog-menu__item
-
-    &__item {}
-
-    // .blog-menu__link
-
-    &__link {}
-}
-
 .main {
     grid-area: main;
+    margin-top: 120px;
 }
 
 .blog {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 30px;
-    padding-top: 120px;
+    // padding-top: 120px;
     margin-bottom: 120px;
 
     &__title {
         grid-column: 1 / -1;
         text-align: center;
-        margin-bottom: 80px;
+        margin: 0 0 50px 0;
     }
 
     // .blog__item
 
     &__item {
-
-
 
         &-col2 {
             grid-column: span 2;
@@ -91,61 +40,51 @@ img {
     }
 }
 
-
-span[class*=img-text] {
-
-    font-family: 'Roboto';
-    font-size: 20px;
-    position: absolute;
-    bottom: 20px;
-
-}
-
 .title {}
 
+.blog-article:hover::after {
 
+    // background: linear-gradient(0, #241F24 1.04%, rgba(91, 91, 91, 0.26) 6.99%, rgba(187, 186, 192, 0) 12.29%);
+}
 
 .blog-article {
-    display: flex;
-    // flex-direction: column;
-    justify-content: space-between;
 
+    display: flex;
+    justify-content: space-between;
     position: relative;
     border-radius: 20px;
-    overflow: hidden;
-    background: linear-gradient(0deg, #241F24 0%, rgba(91, 91, 91, 0.45) 34.11%, rgba(187, 186, 192, 0.26) 62.50%);
+    // overflow: hidden;
 
-    .blog-article__img-icon_like,
-    .blog-article__img-icon_download {}
-
-
-    // .blog-article__img
-
-    &__img {
-        // background: linear-gradient(270deg, #241F24 0%, rgba(91, 91, 91, 0.45) 34.11%, rgba(187, 186, 192, 0.26) 62.50%);
-        // background: linear-gradient(270deg, #241F24 1.04%, rgba(91, 91, 91, 0.26) 6.99%, rgba(187, 186, 192, 0.00) 12.29%);
-        opacity: 0.8;
-        cursor: pointer;
+    &::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        background: linear-gradient(0, #241F24 0%, rgba(91, 91, 91, 0.45) 34.11%, rgba(187, 186, 192, 0.26) 62.5%);
+        //можна через градієнт, але ще є варіант блюру як картинки поверх іншого зображення
+        // background-image: url("../images/blure.png");
+        border-radius: 20px;
     }
 
-    &__img-text_name {
-        color: $white-color;
-        font-weight: 500;
-        left: 20px;
 
 
-    }
+    &:hover {
+        &::after {
+            background: linear-gradient(0, #241F24 1.04%, rgba(91, 91, 91, 0.26) 6.99%, rgba(187, 186, 192, 0) 12.29%);
+        }
 
-    &__img-text_date {
-        color: $alto-color;
-        right: 20px;
-        font-weight: 400;
+        .blog-article__img-icon {
+            z-index: 1;
+            opacity: 1;
+            transition: .3s ease-in-out;
+        }
     }
 
     // .blog-article__img-icon
     &__img-icon {
-
-        // .blog-article__img-icon_like
+        opacity: 0;
 
         &_like {
             @extend %icon-style;
@@ -158,23 +97,34 @@ span[class*=img-text] {
             @extend %icon-style;
             right: 20px;
         }
+
     }
 
-    // .blog-article__title
+    &__text {
+        display: flex;
+        position: absolute;
+        justify-content: space-between;
+        padding: 20px;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 90%;
+        font-family: 'Roboto';
+        font-size: 20px;
+        z-index: 2;
 
-    &__title {}
 
-    // .blog-article__text
+        &-name {
+            color: $white-color;
+            font-weight: 500;
+        }
 
-    &__text {}
+        &-date {
+            color: $alto-color;
+            font-weight: 400;
+        }
 
-    // .blog-article__btn
 
-    &__btn {}
+    }
+
 }
-
-.btn {}
-
-
-
-.copyright {}
