--- a/students/motkaliuk_andrii/18_responsive_design/src/css/header/_menu.scss
+++ b/students/motkaliuk_andrii/18_responsive_design/src/css/header/_menu.scss
@@ -19,7 +19,7 @@
     &>a {
         color: $black-color;
 
-        @include media(md) {
+        @include media(lg) {
             padding: 15px 10px;
         }
     }
