--- a/students/motkaliuk_andrii/18_responsive_design/src/css/footer/_input.scss
+++ b/students/motkaliuk_andrii/18_responsive_design/src/css/footer/_input.scss
@@ -1,5 +1,9 @@
 .knowing {
     padding-left: 55px;
+
+    @include media(md) {
+        padding-left: 0;
+    }
 }
 
 .input_place {
@@ -19,6 +23,11 @@
     padding-left: 10px;
     border-radius: 4px;
     border: 1px solid #BCD0E5;
+
+    @include media(md) {
+        text-align: center;
+        padding: 0;
+    }
 }
 
 .input_space::placeholder {
