--- a/students/tiselko_iryna/class_works/17_grid/src/css/_grid.scss
+++ b/students/tiselko_iryna/class_works/17_grid/src/css/_grid.scss
@@ -57,14 +57,14 @@
             // grid-row: 1;
         }
 
-        &:nth-child(3) {
-            grid-row: 1 / -1;
-        }
+        // &:nth-child(3) {
+        //     grid-row: 1 / -1;
+        // }
 
-        &:nth-child(4) {
-            grid-column: 1 / span 2;
-            grid-row: 2 / span 2;
-        }
+        // &:nth-child(4) {
+        //     grid-column: 1 / span 2;
+        //     grid-row: 2 / span 2;
+        // }
     }
 }
 
