--- a/students/tiselko_iryna/class_works/17_grid/src/css/_variables.scss
+++ b/students/tiselko_iryna/class_works/17_grid/src/css/_variables.scss
@@ -7,7 +7,7 @@ $grey-7-color: #495057;
 $gray-8-color: #343a40;
 $green-color: green;
 
-$default-body-color: $orang-color;
+$default-body-color: $white-color;
 
 // fonts
 $default-font-name: 'Roboto';
