--- a/students/tiselko_iryna/13_preprocessors/src/css/main/_wrapper.scss
+++ b/students/tiselko_iryna/13_preprocessors/src/css/main/_wrapper.scss
@@ -1,30 +1,14 @@
 .wrapper {
-    padding-left: 70px;
-    padding-right: 85px;
-    display: flex;
-    align-items: center;
-    position: relative;
-}
-
-.wrapper::after {
-    content: '';
-    display: block;
-    width: 1px;
-    height: 560px;
-    background-color: $color-gold;
-    position: absolute;
-    right: 0;
-}
-
-.borders {
-    width: 430px;
-    height: 430px;
+    margin-top: 85px;
+    margin-bottom: 65px;
+    margin-left: 70px;
     border: 1px solid $color-gold;
+    width: 430px;
     position: relative;
-    z-index: 1
+    z-index: 1;
 }
 
-.borders::before {
+.wrapper::before {
     content: '';
     display: block;
     width: 230px;
@@ -36,7 +20,7 @@
     right: 100px;
 }
 
-.borders::after {
+.wrapper::after {
     content: '';
     display: block;
     width: calc(100% + 4px);
@@ -48,8 +32,7 @@
     left: -2px;
 }
 
-
 .photo {
-    margin: 15px;
     border: 1px solid $color-gold;
+    margin: 15px;
 }
