--- a/students/motkaliuk_andrii/17_grid/src/css/_variables.scss
+++ b/students/motkaliuk_andrii/17_grid/src/css/_variables.scss
@@ -1,8 +1,6 @@
 $white-color: #FFFFFF;
-$gray-3-color: #dee2e6;
-$gray-6-color: #868e96;
-$grey-7-color: #495057;
-$gray-8-color: #343a40;
+$light-gray-color: #E0E0E0;
+$gray-color: rgba(224, 224, 224, 0.50);
 
 $default-body-color: $white-color;
 
