--- a/students/motkaliuk_andrii/17_grid/src/css/_architectural-photography.scss
+++ b/students/motkaliuk_andrii/17_grid/src/css/_architectural-photography.scss
@@ -1,12 +1,5 @@
-.page {}
-
-.main {}
-
 html,
-.page {
-    height: 100%;
-}
-
+.page,
 .container {
     height: 100%;
 }
@@ -53,15 +46,20 @@ html,
         transition: opacity 0.2s ease-in-out;
     }
 
-    &_blure {
-        // градієнт не працює, не знаю як це зробити
-        background: linear-gradient(0deg, #241F24 0%, rgba(91, 91, 91, 0.45) 34.11%, rgba(187, 186, 192, 0.26) 62.50%);
-        opacity: 0.8;
+    &:hover::after {
+        background: linear-gradient(0, #241F24 1.04%, rgba(91, 91, 91, 0.26) 6.99%, rgba(187, 186, 192, 0) 12.29%);
+    }
 
-        &:hover {
-            opacity: 1;
-            transition: opacity 0.2s ease-in-out;
-        }
+    &::after {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background: linear-gradient(0, #241F24 0%, rgba(91, 91, 91, 0.45) 20.11%, rgba(187, 186, 192, 0.26) 62.5%);
+
     }
 
     &__img {
@@ -76,7 +74,10 @@ html,
         bottom: 10px;
         left: 10px;
         padding: 10px;
-        color: #FFFFFF;
+        color: $white-color;
+        z-index: 10;
+
+
     }
 
     &__date {
@@ -84,7 +85,8 @@ html,
         bottom: 10px;
         right: 10px;
         padding: 10px;
-        color: #FFFFFF;
+        color: $white-color;
+        z-index: 10;
     }
 
     &__button {
@@ -94,12 +96,13 @@ html,
             left: 20px;
             padding: 10px;
             border-radius: 8px;
-            background: rgba(224, 224, 224, 0.50);
+            background: $gray-color;
             cursor: pointer;
             opacity: 0;
+            z-index: 10;
 
             &:hover {
-                background: #E0E0E0;
+                background-color: $light-gray-color;
             }
         }
 
@@ -109,12 +112,13 @@ html,
             right: 20px;
             padding: 10px;
             border-radius: 8px;
-            background: rgba(224, 224, 224, 0.50);
+            background: $gray-color;
             cursor: pointer;
             opacity: 0;
+            z-index: 10;
 
             &:hover {
-                background-color: #E0E0E0;
+                background-color: $light-gray-color;
             }
         }
     }
