--- a/students/hridina_anastasiia/13_postprocessors/src/css/_global.scss
+++ b/students/hridina_anastasiia/13_postprocessors/src/css/_global.scss
@@ -43,8 +43,8 @@ body {
 
 .row {
     display: flex;
-    align-items: center;
     justify-content: center;
+    gap: 150px;
 }
 
 .col-12 {
@@ -53,8 +53,10 @@ body {
 }
 
 .col-6 {
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: space-between;
-    width: 100%;
+    position: relative;
+    padding-top: 50px;
+}
+
+img {
+    max-width: 100%;
 }
