--- a/students/tiselko_iryna/11_flex/styles/styles.css
+++ b/students/tiselko_iryna/11_flex/styles/styles.css
@@ -14,17 +14,15 @@ body {
 
 h1,
 h2,
-h4 {
+h4,
+.input__label {
     color: #2F281E;
-    font-family: Montserrat, Arial, Helvetica, sans-serif;
-    font-style: normal;
     font-weight: 700;
 }
 
 h1 {
     font-size: 44px;
     line-height: 54px;
-    margin: 0;
 }
 
 h2 {
@@ -32,7 +30,8 @@ h2 {
     line-height: normal;
 }
 
-h4 {
+h4,
+.input__label {
     font-size: 20px;
     line-height: 30px;
 }
@@ -54,7 +53,8 @@ input {
     border: none;
 }
 
-.input__btn {
+.input__btn,
+.btn__btn {
     font-weight: 700;
     width: 180px;
     height: 50px;
@@ -65,6 +65,10 @@ input {
     color: #fff;
 }
 
+.btn__btn {
+    padding: 13px 40px;
+}
+
 .container {
     max-width: 1200px;
     margin: 0 auto;
@@ -73,52 +77,47 @@ input {
 
 .row {
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
 }
 
-/* .col-6 {
+.col-6 {
     width: 50%;
 }
 
 .col-4 {
     width: calc(100% / 12 * 4);
     margin: 0 -15px;
-} */
+}
 
-/* .col-3 {
+.col-3 {
     width: calc(100% / 12 * 3);
     margin: 0 -15px;
-} */
+}
 
-/* [class*="col-"] {
+[class*="col-"] {
     padding: 15 px;
     box-sizing: border-box;
-} */
-
-.nav__block {
-    align-items: center;
 }
 
 .menu__block {
     display: flex;
-    flex-direction: row;
-    text-align: center;
 }
 
-.menu__item {
+.menu__item:not(:last-child) {
     padding-right: 20px;
 }
 
-.menu__links {
+.menu__link,
+.footer__link {
     font-weight: 400;
     color: #2F281E;
     line-height: 28px;
     text-decoration: none;
 }
 
-.menu__links:hover {
+.menu__link:hover,
+.footer__link:hover {
     color: #F90;
 }
 
@@ -128,31 +127,25 @@ input {
 }
 
 
-.btn__in_btn,
-.btn__up_btn {
+.btn__in-btn,
+.btn__up-btn {
     width: 110px;
     height: 46px;
     border-radius: 4px;
     font-weight: 600;
     line-height: normal;
     text-align: center;
+    padding: 13px 25px;
 }
 
-.btn__in_btn {
+.btn__in-btn {
     border: 1px solid #BCD0E5;
     background-color: #fff;
-}
-
-.btn__in__text {
     color: #2F281E;
 }
 
-.btn__up_btn {
+.btn__up-btn {
     background-color: #F90;
-
-}
-
-.btn__up__text {
     color: #fff;
 }
 
@@ -164,19 +157,9 @@ input {
     padding-left: 16px;
 }
 
-.hero__container {
-    max-width: 1200px;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 70px;
-    padding-bottom: 100px;
-}
-
-.hero__container_content {
-    max-width: 500px;
-    width: 100%;
+.hero {
+    margin-top: 70px;
+    margin-bottom: 100px;
 }
 
 .content__title {
@@ -184,19 +167,18 @@ input {
 }
 
 .content__text {
-    padding-bottom: 20px;
+    padding-bottom: 35px;
 }
 
 .hero__container-img {
     padding-left: 55px;
 }
 
-.tools__bg {
+.tools {
     background-image: url(../images/tools/background_tools.svg);
     background-position: center bottom;
     background-repeat: no-repeat;
-    background-size: contain;
-    padding-bottom: 74px;
+    background-size: cover;
 }
 
 .tools__title {
@@ -206,15 +188,12 @@ input {
     padding-bottom: 50px;
 }
 
-.tools__wraper {
-    display: flex;
-    justify-content: space-between;
-    gap: 40px;
+.tools__btn {
+    text-align: center;
+    margin-bottom: 74px;
 }
 
 .card {
-    max-width: 270px;
-    width: 100%;
     padding-bottom: 70px;
 }
 
@@ -226,12 +205,13 @@ input {
     padding-bottom: 16px;
 }
 
-.tools__container>.input__btn__block {
-    text-align: center;
+.footer {
+    margin-top: 100px;
+    margin-bottom: 70px;
 }
 
 .footer__logo,
-.footer__links,
+.footer__nav,
 .footer__input {
     align-self: flex-start;
 }
@@ -245,26 +225,12 @@ input {
     padding-left: 65px;
 }
 
-.footer__links>h4 {
-    margin-top: 0;
-    margin-bottom: 0;
+.footer__caption {
     padding-bottom: 30px;
 }
 
-.links__caption {
-    padding: 0;
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-.links__url {
-    color: #2F281E;
-    font-weight: 400;
-    line-height: 28px;
-}
-
-.footer__input {
-    padding-left: 65px;
+.footer__item:not(:last-child) {
+    padding-bottom: 15px;
 }
 
 .input__box {
@@ -272,22 +238,14 @@ input {
     border: 1px solid #BCD0E5;
     width: 340px;
     height: 50px;
+    padding-left: 10px;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 
-::placeholder {
+.input__box::placeholder {
     color: #BCD0E5;
     font-weight: 400;
     padding-left: 10px;
     padding-right: 10px;
-}
-
-
-.input__caption {
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-bottom: 25px;
-}
-
-.input__block {
-    padding-bottom: 25px;
 }
